--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,7 @@
 }
 
 .loading-background {
-    background-image: url('https://i.imgur.com/ANW2eXg.jpeg');
+    background-image: url('https://wallpapercave.com/wp/wp2668084.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover; /* هذا مهم لعرض الصورة بالكامل */
