--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,7 @@
 }
 
 .loading-background {
-    background-image: url('https://wallpapercave.com/wp/wp2668084.jpg');
+    background-image: url('https://wallpapercave.com/wp/wp10084718.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover; /* هذا مهم لعرض الصورة بالكامل */
@@ -78,7 +78,7 @@
 
 #game-wrap {
 	background-color: #d5d2db;
-	background-image: url('https://t3.ftcdn.net/jpg/04/14/96/66/360_F_414966642_vhZPP7IvjXqc2sqPu79bgBznYz7rjOYV.jpg');
+	background-image: url('https://images.wallpapersden.com/image/download/reaching-the-stars-over-mountain_bWZpbWWUmZqaraWkpJRmbmdlrWZlbWU.jpg');
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover; /* ⬅️ تغيير مهم */
