--- a/css/custom.css
+++ b/css/custom.css
@@ -78,7 +78,7 @@
 
 #game-wrap {
 	background-color: #d5d2db;
-	background-image: url('https://images.wallpapersden.com/image/download/reaching-the-stars-over-mountain_bWZpbWWUmZqaraWkpJRmbmdlrWZlbWU.jpg');
+	background-image: url('https://i.imgur.com/KimjqLj.png');
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover; /* ⬅️ تغيير مهم */
