--- a/css/game.css
+++ b/css/game.css
@@ -284,6 +284,26 @@ body {
     color: #000;
 }
 
+div#graphics-settings {
+    text-align: center;
+}
+
+.ssscursır {
+    /* border-bottom: solid; */
+    /* background: #3a37af; */
+    /* line-height: 2; */
+    /* color: #fff; */
+    /* font-size: 16px; */
+    /* font-weight: 600; */
+    border-bottom: solid;
+    background: #777777;
+    line-height: 2;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+}
+
 #game-wrap #game-cont #stretch-box #main-menu-view #mm-line-top {
     box-sizing: border-box;
     height: 70px;
@@ -4742,14 +4762,14 @@ div#kich-hoat {
 }
 
 #overlay {
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-    height: 100%;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 999;
+    /* background-color: rgb(254 192 192 / 0%); */
+    /* display: none; */
+    /* height: 100%; */
+    /* left: 0; */
+    /* position: fixed; */
+    /* top: 0; */
+    /* width: 100%; */
+    /* z-index: 999; */
 }
 
 .spancursor {
