--- a/css/game.css
+++ b/css/game.css
@@ -6,6 +6,19 @@
     font-family: 'HelveticaNeueLT', sans-serif;
 }
 
+.iframe-container iframe {
+    width: 109%;
+    height: 50px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px;
+    border-width: initial;
+    border-style: none;
+    border-color: initial;
+    border-image: initial;
+    border-radius: 5px;
+    transition: transform 0.3s;
+    margin-left: -13px;
+}
+
 body,
 html {
     background-color: #d5d2db;
@@ -282,6 +295,16 @@ body {
 
 #game-wrap #game-cont #stretch-box #main-menu-view {
     color: #000;
+}
+
+.ssskin {
+    border-bottom: solid;
+    background: #00620c;
+    line-height: 2;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
 }
 
 div#graphics-settings {
@@ -4968,13 +4991,14 @@ button#buy-premium {
 .popup {
     background-color: white;
     border: 1px solid #ddd;
-    display: none;
+    /* display: none; */
     left: 50%;
     max-height: 85%;
-    max-width: 500px;
-    overflow-y: auto;
-    padding: 20px;
+    max-width: 526px;
+    padding: 21px;
     position: fixed;
+    width: 168%;
+    overflow-y: auto;
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
