--- a/css/game.css
+++ b/css/game.css
@@ -4989,16 +4989,28 @@ button#buy-premium {
 }
 
 .popup {
+    /* background-color: white; */
+    /* border: 1px solid #ddd; */
+    /* display: none; */
+    /* left: 50%; */
+    /* max-height: 85%; */
+    /* max-width: 526px; */
+    /* padding: 21px; */
+    /* position: fixed; */
+    /* width: 168%; */
+    /* overflow-y: auto; */
+    /* top: 50%; */
+    /* transform: translate(-50%, -50%); */
+    /* z-index: 1000; */
     background-color: white;
     border: 1px solid #ddd;
-    /* display: none; */
+    display: none;
     left: 50%;
     max-height: 85%;
-    max-width: 526px;
-    padding: 21px;
-    position: fixed;
-    width: 168%;
+    max-width: 500px;
     overflow-y: auto;
+    padding: 20px;
+    position: fixed;
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
