--- a/css/game.css
+++ b/css/game.css
@@ -6,19 +6,6 @@
     font-family: 'HelveticaNeueLT', sans-serif;
 }
 
-.iframe-container iframe {
-    width: 109%;
-    height: 50px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px;
-    border-width: initial;
-    border-style: none;
-    border-color: initial;
-    border-image: initial;
-    border-radius: 5px;
-    transition: transform 0.3s;
-    margin-left: -13px;
-}
-
 body,
 html {
     background-color: #d5d2db;
@@ -297,16 +284,6 @@ body {
     color: #000;
 }
 
-.ssskin {
-    border-bottom: solid;
-    background: #00620c;
-    line-height: 2;
-    color: #fff;
-    font-size: 14px;
-    font-weight: 600;
-    text-align: center;
-}
-
 div#graphics-settings {
     text-align: center;
 }
@@ -326,18 +303,6 @@ div#graphics-settings {
     font-weight: 600;
     text-align: center;
 }
-
-#graphics-settings button {
-    padding: 10px 20px;
-    margin: 5px;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    background-color: white;
-    color: black;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-}
-
 
 #game-wrap #game-cont #stretch-box #main-menu-view #mm-line-top {
     box-sizing: border-box;
@@ -3910,7 +3875,7 @@ div#graphics-settings {
     font-size: 1.2em !important;
     font-weight: 700;
     text-align: center;
-    text-shadow: 0 0 0 #505050, 0 0 0.5em #5b5b5b, 0 0 0.4em #525252;
+    text-shadow: 0 0 0 #ff0, 0 0 0.5em #ff0, 0 0 0.4em #ff0;
 }
 
 #KeyRespawn,
@@ -4666,7 +4631,7 @@ i.fa.fa-solid.fa-signal {
 	
 }
 
-.text-W-25 {
+.text-FDZ {
     color: #FFF;
     font-size: 20px;
     font-weight: 700;
@@ -4676,7 +4641,7 @@ i.fa.fa-solid.fa-signal {
     animation: text-shadow-animation 1.5s infinite;
 }
 
-.text-W-25:hover {
+.text-FDZ:hover {
     color: #000;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     transform: scale(1.05);
@@ -4989,19 +4954,6 @@ button#buy-premium {
 }
 
 .popup {
-    /* background-color: white; */
-    /* border: 1px solid #ddd; */
-    /* display: none; */
-    /* left: 50%; */
-    /* max-height: 85%; */
-    /* max-width: 526px; */
-    /* padding: 21px; */
-    /* position: fixed; */
-    /* width: 168%; */
-    /* overflow-y: auto; */
-    /* top: 50%; */
-    /* transform: translate(-50%, -50%); */
-    /* z-index: 1000; */
     background-color: white;
     border: 1px solid #ddd;
     display: none;
