--- a/css/game2.css
+++ b/css/game2.css
@@ -6,6 +6,29 @@
     font-family: 'HelveticaNeueLT', sans-serif;
 }
 
+input#FoodShadow {
+    width: 264px;
+    border: 0px solid #ffffff;
+}
+
+input#FoodSize {
+    width: 264px;
+}
+
+input#PortionAura {
+    width: 264px;
+}
+
+.container1 {}
+
+input#PortionSize {
+    width: 264px;
+}
+
+input#smoothCamera {
+    width: 264px;
+}
+
 body,
 html {
     background-color: #d5d2db;
@@ -983,7 +1006,7 @@ div#graphics-settings {
 }
 
 #game-wrap #game-cont #stretch-box #main-menu-view #mm-line-center .column-right {
-    background: rgba(0, 0, 0, .25);
+    background: rgb(0 0 0 / 0%);
     border-radius: 5px;
     height: 318px;
     margin: 30px 0;
@@ -4041,6 +4064,8 @@ div#graphics-settings {
     font-weight: bold;
     text-decoration: none;
     text-transform: capitalize;
+    color: #fff;
+    font-size: 12px;
 }
 
 .flag {
@@ -4833,11 +4858,11 @@ div#kich-hoat {
 }
 
 .container1 {
-    background: #fff;
+    background: #ffffff00;
     float: left;
     font-size: 13px;
     padding: 1px;
-    width: 140px;
+    width: 148px;
 }
 
 .red-icon {
