--- a/css/custom.css
+++ b/css/custom.css
@@ -78,7 +78,7 @@
 
 #game-wrap {
 	background-color: #d5d2db;
-	background-image: url('https://i.imgur.com/YqGlYVZ.jpeg');
+	background-image: url('https://i.imgur.com/S2BnJ4Y.jpeg');
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover; /* ⬅️ تغيير مهم */
